syntax = "proto3";

package product_service;
option go_package = "genproto/product_service";

import "product_model.proto";

service ProductService {
  rpc CreateProduct(Product) returns (GetWithID);
  rpc UpdateProduct(Product) returns (Product);
  rpc DeleteProduct(GetWithID) returns (DeleteResponse);
  rpc GetProductByID(GetWithID) returns (Product);
  rpc GetAllProducts(ListRequest) returns (ListProductResponse);

  rpc CreateOrder(Order) returns (GetWithID);
  rpc CancelOrder(GetWithID) returns (DeleteResponse);
  rpc GetOrderByID(GetWithID) returns (Order);
  rpc GetAllOrders(ListRequest) returns (ListOrderResponse);

  rpc SearchProduct(Filter) returns (ListProductResponse);
  rpc Recommendation(Recom) returns (ListProductResponse);
  
  rpc GetSavedProductsByUserID(GetWithUserID) returns (ListProductResponse);
  rpc GetWishlistByUserID(GetWithUserID) returns (ListProductResponse);
  rpc GetOrderedProductsByUserID(GetWithUserID) returns (ListProductResponse);
  
  rpc LikeProduct(Like) returns (MoveResponse);
  rpc SaveProduct(Save) returns (MoveResponse);
  rpc StarProduct(Star) returns (MoveResponse);
  rpc CommentToProduct(Comment) returns (MoveResponse);
  
  rpc GetDisableProducts(ListRequest) returns (ListOrderResponse);
  rpc GetProductOrders(GetWithID) returns (ListOrderResponse);
  rpc GetProductComments(GetWithID) returns (ListCommentResponse);
  rpc GetProductLikes(GetWithID) returns (ListWishlistResponse);
  rpc GetProductStars(GetWithID) returns (ListStarsResponse); 

  rpc GetAllComments(ListRequest) returns (ListCommentResponse);
  rpc GetAllStars(ListRequest) returns (ListStarsResponse);
}